--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,9 @@ border-radius: 3px;
 white-space: nowrap;
 }
 
+.btn-default{
+	background-color: #ffe400;margin-bottom:10px; margin-left:10px;font-weight:bold;
+	
+}
+
 
