--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,26 @@ white-space: nowrap;
 }
 
 
+/* centered columns styles */
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+    text-align:center;
+}
+
+
+.dash_thumb{
+	font-size:5em;
+	color:#428bca;
+	}
+	
+.dash_thumb:hover{
+	color:#365a79;
+}
