--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@ border-style: solid;
 border-radius: 3px;
 white-space: nowrap;
 }
-
+/* 
 .btn-default{
 	background-color: #ffe400;margin-bottom:10px; margin-left:10px;font-weight:bold;
 	
-}
+} */
 
 
 /* centered columns styles */
