--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,13 @@ border-radius: 3px;
 	
 	
 }
+
+.badge{
+	background-color: #e71e17;
+font-size: 17px;
+position: relative;
+top: -33px;
+left: -11px;
+border-radius: 31px;
+
+	}
